# Knight_car

./: .gitignore  20160226-qlai-duckula-RCDP5-logout.bag  Makefile  Makefile.orig  README.md  bootstrap.sh  bootstrap.sh.old  dependencies_common.sh  duckietown_install.sh  duckietown_install_car.sh  duckietown_install_duckietop.sh  duckietown_install_laptop.sh  duckietown_setup.sh  environment.sh  fix_wifi.sh  lab04-jenshen.txt  lab04-lapentab,txt  misha_temp.txt  scuderia.yaml  solvv.m  test_push.txt
CoordinationTest/: Readme.md
DAGU_ROS_ws/src/DAGU_DriverStack/DAGU_MotorController/: CMakeLists.txt  package.xml
DAGU_ROS_ws/src/DAGU_DriverStack/DAGU_MotorController/src/: CarMotorInterface.py  DCMotorInterface.py  DiffDriveMotorInterface.py  motorsController_node.py
PI_camera/: README.md
PI_motorInterface/: DCMotorInterface.py
RPi2-Ubuntu/: install.sh  install_new_ros_pkg.sh  readme.md  runmeonrpi2.sh  setup.md
car_supervisor/: package.xml
catkin_ws/src/cam_info_reader/: CMakeLists.txt  package.xml
catkin_ws/src/cam_info_reader/launch/: remote_launch.launch  rosberrypi_cam.launch
catkin_ws/src/cam_info_reader/src/: camera_node.py  main.cpp
catkin_ws/src/cone_detector/: CMakeLists.txt  LICENSE  README.md  package.xml
catkin_ws/src/cone_detector/launch/: cone_detector.launch  cone_detector_node.launch  echo_cpp.launch  echo_py.launch  morphology_object_tracking.launch
catkin_ws/src/cone_detector/src/: .cone_detector_node.py.swp  MatchTemplate_Demo.cpp  SURF_FlannMatcher.cpp  cone_detector_node.py  coney.py  contour.py  echo.cpp  echo.py  edge.py  image_matching.py  morphology_object_tracking.cpp
catkin_ws/src/duckie_rr_bridge/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/duckie_rr_bridge/launch/: duckie_host.launch
catkin_ws/src/duckie_rr_bridge/src/: .gitignore  duckie_client.py  duckie_host.py
catkin_ws/src/duckie_rr_bridge/src/duckie_rr_bridge/: duckie_client.py  duckie_host.py
catkin_ws/src/f4-devel/kinematics/: CMakeLists.txt  package.xml  setup.py  training_data.txt
catkin_ws/src/f4-devel/kinematics/include/kinematics/: Duty_fi_function.py  Forward_kinematics.py  Inverse_kinematics.py  Linear_learner.py  test_kinematics.py  theta_dot_fi_function  v_weights_file
catkin_ws/src/f4-devel/kinematics/latency/: latency analysis.csv  latency_analysis.csv  latency_analysis.ods  latency_analysis_sync.csv  latency_analysis_sync.ods  latency_test1  latency_test2
catkin_ws/src/f4-devel/kinematics/launch/: forward_kinematics_node.launch  inverse_kinematics_node.launch  kinematics_learning_node.launch  kinematics_tester_node.launch  path_visualizer_node.launch  pose2d_to_path_node.launch  pose_to_path_node.launch  position_filter_node.launch  record_left_turns.launch  trajectory_learning_node.launch  trajectory_recording_node.launch  vicon_learning_node.launch  virtual_learning_node.launch
catkin_ws/src/f4-devel/kinematics/rviz/: kinematics.rviz
catkin_ws/src/f4-devel/kinematics/scripts/: Duty_fi_function.py  Forward_kinematics.py  Inverse_kinematics.py  Linear_learner.py  fi_functions  forward_kinematics_node.py  inverse_kinematics_node.py  kinematics_learning_node.py  learn_offline.py  pose2d_to_path_node.py  position_filter_node.py  test_kinematics.py  test_linear_learner_and_forward_kinematics.py  theta_dot_weights_file  training_set  trajectory_learning_node.py  trajectory_recording_node.py  v_fi_function  v_weights_file  vicon_learning_node.py  virtual_learning_node.py  virtual_learning_node_old.py
catkin_ws/src/f4-devel/kinematics/src/: forward_kinematics_node.cpp  inverse_kinematics_node.cpp  kinematics_tester_node.cpp  pose2d_to_path_node.cpp  pose_to_path_node.cpp
catkin_ws/src/f4-devel/kinematics/tests/: all_tests.test  forward_kinematics_tester_node.test  inverse_kinematics_tester_node.py  inverse_kinematics_tester_node.test  kinematics_learning_tester_node.py  kinematics_learning_tester_node.test  position_filter_tester_node.py  position_filter_tester_node.test  test_forward_kinematics.py  test_forward_kinematics_node.py  test_inverse_kinematics.py  test_linear_learner.py  test_training_set.txt  test_virtual_learning.py  vicon_learning_tester_node.py  vicon_learning_tester_node.test
catkin_ws/src/isam/isamlib/: CMakeLists.txt
catkin_ws/src/rosberrypi_cam/: CMakeLists.txt  LICENSE  README.md  TODO.md  package.xml  readme.md
catkin_ws/src/rosberrypi_cam/calibration/: picamera.yaml
catkin_ws/src/rosberrypi_cam/launch/: remote_launch.launch  rosberrypi_cam.launch
catkin_ws/src/rosberrypi_cam/src/: camera_node.py  main.cpp
catkin_ws/src/spring2016/f4-devel/forward_kinematics/: CMakeLists.txt  package.xml
catkin_ws/src/spring2016/f4-devel/forward_kinematics/launch/: duckietown-forward_kinematics.launch  duckietown-unit-tests-forward_kinematics.launch  forward_kinematics.launch  forward_kinematics_node.launch
catkin_ws/src/spring2016/f4-devel/forward_kinematics/src/: forward_kinematics_node.cpp
catkin_ws/src/spring2016/f4-devel/kinematics/: CMakeLists.txt  package.xml
catkin_ws/src/spring2016/f4-devel/kinematics/launch/: forward_kinematics_node.launch
catkin_ws/src/spring2016/f4-devel/kinematics/src/: forward_kinematics_node.cpp  inverse_kinematics_node.cpp  kinematics_tester_node.cpp  path_visualizer_node.cpp
catkin_ws/src/spring2016/valerio/virtual_mirror_valerio/: CMakeLists.txt  package.xml
catkin_ws/src/spring2016/valerio/virtual_mirror_valerio/launch/: virtual_mirror_test.launch
catkin_ws/src/spring2016_nctu/trabant/opencv-cpp-template/: CMakeLists.txt  package.xml
catkin_ws/src/spring2016_nctu/trabant/opencv-cpp-template/launch/: opencv_cpp_template_node.launch
catkin_ws/src/spring2016_nctu/trabant/opencv-cpp-template/src/: opencv_cpp_detector.cpp  opencv_cpp_template_node.cpp
circuits/: RPi2LSD.brd  RPi2LSD.sch  i2c_sensor_and_led_hat.brd  i2c_sensor_and_led_hat.sch
duckietown_msgs/: CMakeLists.txt
lane_detector/: .laneDetector.py.swp  .main.py.swp  main.py
mouse_encoder/: CMakeLists.txt  package.xml
ros_diagram/: .gitignore  .test.wmf.swp  Duckietown_ROS_Diagram.dot  Makefile  (+7 more)
(+1901 files in other folders)
