<?xml version="1.0"?>
<package>
  <name>virtual_mirror_valerio</name>
  <version>0.0.0</version>
  <description>The virtual_mirror-valerio package</description>

  <maintainer email="valerio@mit.edu">Valerio Varricchio</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend> 
  <run_depend>rospy</run_depend> 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>